--- a/dev/_header.html
+++ b/dev/_header.html
@@ -18,8 +18,204 @@
 	<script src="js/parallax.js"></script>
 	<script src="js/lunbo.js"></script>
 	<script src="js/ready.js"></script>
+
+
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
+
+
+
+<div class="header">
+	<div class="header_slider gdlr-core-pbf-background-wrap">
+		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/header_1.jpg)"></div>
+		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/header_2.jpg)"></div>
+	</div>
+
+	<div class="header_top">
+		<div class="header_top__wrapper">
+			<div class="header_ooo">Генеральный подрядчик проекта — ООО «Лемминкяйнен Строй»</div>
+			<div class="header_phone">+7 (812) 421-78-80</div>
+			<div class="header_phone">+7 (800) 222-93-80</div>
+			<div class="header_worktime">Ежедневно с 10:00 до 19:00</div>
+			<div class="header_brand">
+				<img src="img/lemminkainen.png" alt="Lemminkainen" class="header_brand__img">
+			</div>
+			<div class="header_brand">
+				<img src="img/yit.png" alt="YIT" class="header_brand__img">
+			</div>
+		</div>
+	</div>
+	<div class="header_bottom">
+		<div class="header_bottom__wrapper">
+			<div class="header_logo">
+				<nav class="menu">
+					<a href="javascript:;" class="menu__toggle"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54px" height="31px"><image  x="0px" y="0px" width="54px" height="31px"  xlink:href="data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAADYAAAAfCAQAAAAG7/aoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiCBMUCSlt24sQAAAAPElEQVRIx2P8/5+BboCJflaNWkYlwEjH9DGMg3HUslHL8AIWhtGCeNQyPGC0IB61bNQy2oPRgnjUMrwAADrCBjqc0jTwAAAAAElFTkSuQmCC" /></svg></a>
+
+					<div class="menu__wrap">
+						<div class="menu__wrapper">
+							<a href="javascript:;" class="menu__toggle"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54px" height="31px"><image  x="0px" y="0px" width="54px" height="31px"  xlink:href="data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAADYAAAAfCAQAAAAG7/aoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiCBMUCSlt24sQAAAAPElEQVRIx2P8/5+BboCJflaNWkYlwEjH9DGMg3HUslHL8AIWhtGCeNQyPGC0IB61bNQy2oPRgnjUMrwAADrCBjqc0jTwAAAAAElFTkSuQmCC" /></svg></a>
+
+							<ul class="main_menu__list">
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">О проекте</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">О компании</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Документы</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Управляющая компания</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Ход строительства</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Блог компании</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">FAQ</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Контакты</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Апартаменты</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Выбор апартаментов</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Коммерческие помещения</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Паркинг</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Отделка и мебель</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Инвестирование</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Доходные программы</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Портфельные программы</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Как купить</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Ипотека</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Рассрочка</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">100% оплата</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Ход строительства</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Фото</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Онайн камера</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Преимущества</a>
+									<ul class="main_menu_sub">
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Услуги собственникам</a></li>
+										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Арендаторам</a></li>
+									</ul>
+								</li>
+
+								<li class="main_menu__item">
+									<a href="#" class="main_menu__link">Контакты</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="menu_icons">
+						<div class="menu_icons__item"></div>
+						<div class="menu_icons__item"></div>
+						<div class="menu_icons__item"></div>
+					</div>
+				</nav>
+				<a href="/" class="logo">
+					<img src="img/logo.png" alt="VALO" class="logo__img">
+				</a>
+			</div>
+			<div class="header_info">
+				<div class="wrapper">
+					<div class="header_info__left">
+						<div class="header_title animated fade fade-bottom">VALO</div>
+						<div class="header_subtitle animated fade fade-bottom">апарт-комплекс по-фински</div>
+						<div class="header_desc animated fade fade-bottom">
+							Мы создали принципиально новый <br>
+							формат апартаментов, меняющий <br>
+							стандарты качества для всего сегмента.
+						</div>
+
+						<div class="header_i header_i-apt animated fade fade-bottom">1 545 апт.</div>
+						<div class="header_i header_i-price animated fade fade-bottom">от 2 705 000 р</div>
+					</div>
+					<div class="header_info__right">
+						<div class="header_counter animated fade fade-bottom">
+							<div class="header_counter__label">до повышения цены</div>
+
+							<div class="header_counter__wrap ">
+								<div class="Counter">
+									<div class="Counter-item">
+										<div class="in">
+											<div class="Counter-unit" data-js="counter-days">
+												<div class="Counter-number" data-js="current">0</div>
+												<div class="Counter-number" data-js="next">0</div>
+										  </div>
+										</div>
+										<div class="Counter-label">дни</div>
+									</div>
+									<div class="Counter-item">
+										<div class="in">
+											<div class="Counter-unit" data-js="counter-hours">
+												<div class="Counter-number" data-js="current">0</div>
+												<div class="Counter-number" data-js="next">0</div>
+											</div>
+								  	</div>
+									  <div class="Counter-label">часы</div>
+								  </div>
+								  <div class="Counter-item">
+								  	<div class="in">
+								  		<div class="Counter-unit" data-js="counter-minutes">
+												<div class="Counter-number" data-js="current">0</div>
+												<div class="Counter-number" data-js="next">0</div>
+											</div>
+								  	</div>
+									  <div class="Counter-label">минуты</div>
+								  </div>
+								  <div class="Counter-item">
+								  	<div class="in">
+								  		<div class="Counter-unit" data-js="counter-seconds">
+												<div class="Counter-number" data-js="current">0</div>
+												<div class="Counter-number" data-js="next">0</div>
+											</div>
+								  	</div>
+									  <div class="Counter-label">секунды</div>
+								  </div>
+								</div>
+							</div>
+
+							<a href="#" class="service_btn btn btn-angle-right">Выбрать апартаменты 
+								<svg 
+								 xmlns="http://www.w3.org/2000/svg"
+								 xmlns:xlink="http://www.w3.org/1999/xlink"
+								 width="10px" height="20px">
+								<path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+								 d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"/>
+								</svg>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="header_control">
+				<a href="#" class="header_i_phone"></a>
+				<a href="#" class="header_i_mail"></a>
+
+
+				<div class="header_slider_control">
+					<button type="button" class="header_arrow header_arrow-left" onclick="$('.header_slider').slick('slickPrev')"></button>
+					<button type="button" class="header_arrow header_arrow-right" onclick="$('.header_slider').slick('slickNext')"></button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
