--- a/dev/index.html
+++ b/dev/index.html
@@ -867,7 +867,7 @@
 
 
 
-<div class="blog">
+<div class="blog l_block">
 	<div class="wrapper animated fade fade-bottom">
 		<div class="blog_title">Блог компании</div>
 		<button class="btn">Узнать больше <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></button>
@@ -920,7 +920,7 @@
 
 
 
-<div class="managers">
+<div class="managers l_block">
 	<div class="gdlr-core-pbf-background-wrap">
 		<div class="managers__back gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4"></div>
 	</div>
