--- a/dev/_header.html
+++ b/dev/_header.html
@@ -141,9 +141,11 @@
 							формат апартаментов, меняющий <br>
 							стандарты качества для всего сегмента.
 						</div>
-
-						<div class="header_i header_i-apt animated fade fade-bottom">1 545 апт.</div>
-						<div class="header_i header_i-price animated fade fade-bottom">от 2 705 000 р</div>
+						
+						<div class="header_i_wrap">
+							<div class="header_i header_i-apt animated fade fade-bottom">1 545 апт.</div>
+							<div class="header_i header_i-price animated fade fade-bottom">от 2 705 000 р</div>
+						</div>
 					</div>
 					<div class="header_info__right">
 						<div class="header_counter animated fade fade-bottom">
