--- a/dev/index.html
+++ b/dev/index.html
@@ -262,15 +262,10 @@
 			<div class="service__title">VALO Service —</div>
 			<div class="service__subtitle">управляющая компания с европейскими стандартами качества</div>
 			<div class="service__desc">Все заботы об апартаментах возьмёт на себя управляющая компания VALO Service. Жильцам больше не нужно думать о бытовых сложностях — наши специалисты сами предложат решение любых вопросов и выполнят всю работу.</div>
-			<a href="#" class="service_btn btn btn-angle-right">Подробнее 
-				<svg 
-				 xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink"
-				 width="10px" height="20px">
-				<path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
-				 d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"/>
-				</svg>
-			</a>
+			
+			<div class="service__btn_wrap">
+				<a href="#" class="service_btn btn btn-angle-right">Подробнее <svg xmlns="http://www.w3.org/2000/svg"xmlns:xlink="http://www.w3.org/1999/xlink"width="10px" height="20px"><path fill-rule="evenodd"  fill="rgb(255, 255, 255)"d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"/></svg></a>
+			</div>
 		</div>
 	</div>
 </div>
