--- a/dev/_header.html
+++ b/dev/_header.html
@@ -28,8 +28,8 @@
 
 <div class="header">
 	<div class="header_slider gdlr-core-pbf-background-wrap">
-		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/header_1.jpg)"></div>
-		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/header_2.jpg)"></div>
+		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/header_1.jpg)"></div>
+		<div class="header_slider__item gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/header_2.jpg)"></div>
 	</div>
 
 	<div class="header_top">
