--- a/dev/index.html
+++ b/dev/index.html
@@ -70,7 +70,7 @@
 			<div class="wide__in">
 				<div class="lvl_item__img">
 					<div class="gdlr-core-pbf-background-wrap">
-						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/lvl_1.jpg);"></div>
+						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/lvl_1.jpg);"></div>
 					</div>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 			<div class="wide__in">
 				<div class="lvl_item__img">
 					<div class="gdlr-core-pbf-background-wrap">
-						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/lvl_2.jpg);"></div>
+						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/lvl_2.jpg);"></div>
 					</div>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 			<div class="wide__in">
 				<div class="lvl_item__img">
 					<div class="gdlr-core-pbf-background-wrap">
-						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(../img/lvl_3.jpg);"></div>
+						<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/lvl_3.jpg);"></div>
 					</div>
 				</div>
 			</div>
@@ -960,7 +960,7 @@
 		<div class="wide__in">
 			<div class="photo_webcam animated fade fade-bottom">
 				<div class="photo_webcam__start"></div>
-				<iframe src="//webcam.exdesign.ru/valo/" frameborder="0"></iframe>
+				<iframe src="https://webcam.exdesign.ru/valo/" frameborder="0"></iframe>
 			</div>
 		</div>
 	</div>
