--- a/dev/_header.html
+++ b/dev/_header.html
@@ -9,12 +9,14 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/adaptive.css">
 	<link rel="stylesheet" href="css/iconic.css">
+	<link rel="stylesheet" href="css/jquery.fancybox.css">
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/slick.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/jquery.viewportchecker.min.js"></script>
+	<script src="js/jquery.fancybox.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<script src="js/lunbo.js"></script>
 	<script src="js/ready.js"></script>
