--- a/dev/index.html
+++ b/dev/index.html
@@ -957,8 +957,8 @@
 	<div class="wide">
 		<div class="wide__in">
 			<div class="photo_list animated fade fade-bottom">
-				<a class="fancybox photo_list__item" rel="group" href="img/photo/1.JPG"><img src="img/photo/1.JPG" alt="1"></a>
-				<a class="fancybox photo_list__item" rel="group" href="img/photo/2.JPG"><img src="img/photo/2.JPG" alt="2"></a>
+				<a class="fancybox photo_list__item" data-fancybox="gallery" rel="group" href="img/photo/1.JPG"><img src="img/photo/1.JPG" alt="1"></a>
+				<a class="fancybox photo_list__item" data-fancybox="gallery" rel="group" href="img/photo/2.JPG"><img src="img/photo/2.JPG" alt="2"></a>
 			</div>
 		</div>
 		<div class="wide__in">
@@ -969,15 +969,6 @@
 		</div>
 	</div>
 </div>
-
-
-<a class="various" href="#iframe">123123123</a>
-
-<script>
-$(document).ready(function() {
-	$(".various").fancybox();
-});
-</script>
 
 
 
