--- a/dev/_header.html
+++ b/dev/_header.html
@@ -51,81 +51,8 @@
 			<div class="header_logo">
 				<nav class="menu">
 					<a href="javascript:;" class="menu__toggle"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54px" height="31px"><image  x="0px" y="0px" width="54px" height="31px"  xlink:href="data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAADYAAAAfCAQAAAAG7/aoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiCBMUCSlt24sQAAAAPElEQVRIx2P8/5+BboCJflaNWkYlwEjH9DGMg3HUslHL8AIWhtGCeNQyPGC0IB61bNQy2oPRgnjUMrwAADrCBjqc0jTwAAAAAElFTkSuQmCC" /></svg></a>
-
-					<div class="menu__wrap">
-						<div class="menu__wrapper">
-							<a href="javascript:;" class="menu__toggle"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54px" height="31px"><image  x="0px" y="0px" width="54px" height="31px"  xlink:href="data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAADYAAAAfCAQAAAAG7/aoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiCBMUCSlt24sQAAAAPElEQVRIx2P8/5+BboCJflaNWkYlwEjH9DGMg3HUslHL8AIWhtGCeNQyPGC0IB61bNQy2oPRgnjUMrwAADrCBjqc0jTwAAAAAElFTkSuQmCC" /></svg></a>
-
-							<ul class="main_menu__list">
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">О проекте</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">О компании</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Документы</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Управляющая компания</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Ход строительства</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Блог компании</a></li>
-										<li class="main_menu_sub__item"><a href="faq.html" class="mian_menu_sub__link">FAQ</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Контакты</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Апартаменты</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Выбор апартаментов</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Коммерческие помещения</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Паркинг</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Отделка и мебель</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Инвестирование</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Доходные программы</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Портфельные программы</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Как купить</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Ипотека</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Рассрочка</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">100% оплата</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Ход строительства</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Фото</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Онайн камера</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Преимущества</a>
-									<ul class="main_menu_sub">
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Услуги собственникам</a></li>
-										<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Арендаторам</a></li>
-									</ul>
-								</li>
-
-								<li class="main_menu__item">
-									<a href="#" class="main_menu__link">Контакты</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="menu_icons">
-						<div class="menu_icons__item"></div>
-						<div class="menu_icons__item"></div>
-						<div class="menu_icons__item"></div>
-					</div>
+					
+					//= _menu.html
 				</nav>
 				<a href="/" class="logo">
 					<img src="img/logo.png" alt="VALO" class="logo__img">
