--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -273,7 +273,8 @@
 								</g>
 								</svg>
 							</a>
-							<a href="" class="menu_hor__icon menu_icons__item">
+
+							<a href="javascript:;" class="menu_hor__icon menu_icons__item menu_hor__icon-search-toggle">
 								<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 422.5 423.8" style="enable-background:new 0 0 422.5 423.8;" xml:space="preserve">
 								<style type="text/css">
@@ -299,6 +300,11 @@
 								</g>
 								</svg>
 							</a>
+
+
+							<div class="menu_icons_search">
+								<input type="text" placeholder="Поиск">
+							</div>
 					
 						</div>
 					</div>
