--- a/dev/faq.html
+++ b/dev/faq.html
@@ -201,7 +201,7 @@
 
 
 	<div class="gdlr-core-pbf-background-wrap">
-		<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/faq_back.jpg); min-height: 100%;"></div>
+		<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/faq_back.jpg); min-height: 2000px;"></div>
 	</div>
 
 	<div class="main_inside">
