--- a/dev/index.html
+++ b/dev/index.html
@@ -1021,6 +1021,22 @@
 				<div class="blog_item__pubdate">25.03.2018</div>
 			</a>
 		</div>
+		<div class="blog_item col-4">
+			<a href="#"" class="blog_item__info">
+				<img src="img/blog_item.jpg" alt="Продажи по 214-ФЗ" class="blog_item__img">
+				<div class="blog_item__title">Продажи по 214-ФЗ</div>
+				<div class="blog_item__announce">Продажи апартаментов в комплексе VALO осуществляются по ФЗ №214 о долевом строительстве,...</div>
+				<div class="blog_item__pubdate">25.03.2018</div>
+			</a>
+		</div>
+		<div class="blog_item col-4">
+			<a href="#"" class="blog_item__info">
+				<img src="img/blog_item.jpg" alt="Продажи по 214-ФЗ" class="blog_item__img">
+				<div class="blog_item__title">Продажи по 214-ФЗ</div>
+				<div class="blog_item__announce">Продажи апартаментов в комплексе VALO осуществляются по ФЗ №214 о долевом строительстве,...</div>
+				<div class="blog_item__pubdate">25.03.2018</div>
+			</a>
+		</div>
 	</div>
 
 	<div class="wrapper wrapper_bottom">
