--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -1,6 +1,6 @@
 					<div class="menu__wrap">
-						<div class="menu__wrap-inside">
-							<div class="menu__wrapper">
+						<div class="menu__wrap-inside wrapper">
+							<div class="menu__wrapper ">
 								<a href="javascript:;" class="menu__toggle">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" enable-background="new 0 0 40 40" width="40px" height="40px">
 								    <line x1="0" y1="0" x2="40" y2="40" stroke="rgba(255,255,255,.7)" stroke-width="4.5" stroke-linecap="round" stroke-miterlimit="10"></line>
@@ -14,12 +14,12 @@
 										<a href="about_proj.html" class="main_menu__link">О проекте</a>
 										<ul class="main_menu_sub">
 											<li class="main_menu_sub__item"><a href="about.html" class="mian_menu_sub__link">О компании</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Документы</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Управляющая компания</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Ход строительства</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Блог компании</a></li>
+											<li class="main_menu_sub__item"><a href="documents.html" class="mian_menu_sub__link">Документы</a></li>
+											<li class="main_menu_sub__item"><a href="upr.html" class="mian_menu_sub__link">Управляющая компания</a></li>
+											<li class="main_menu_sub__item"><a href="partners.html" class="mian_menu_sub__link">Партнеры</a></li>
+											<li class="main_menu_sub__item"><a href="blog.html" class="mian_menu_sub__link">Блог компании</a></li>
 											<li class="main_menu_sub__item"><a href="faq.html" class="mian_menu_sub__link">FAQ</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Контакты</a></li>
+											<li class="main_menu_sub__item"><a href="contacts.html" class="mian_menu_sub__link">Контакты</a></li>
 										</ul>
 									</li>
 
