--- a/dev/about_proj.html
+++ b/dev/about_proj.html
@@ -196,13 +196,9 @@
 </div>
 
 
-<div class="main_inside_flex relative clear" style="min-height: 100%;">
+<div class="main_inside_flex relative clear" style="background: url(img/faq_back.jpg) no-repeat fixed center / cover transparent;">
 	<!--  !!!футер внутри .main_inside_flex -->
 
-
-	<div class="gdlr-core-pbf-background-wrap">
-		<div class="gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.4" style="background-image: url(img/faq_back.jpg); min-height: 2000px;"></div>
-	</div>
 
 	<div class="main_inside">
 		<div class="main_inside__in">
@@ -223,16 +219,6 @@
 					<h1>О проекте</h1>
 				</div>
 
-				<div class="left_menu_in-select_wrap">
-					<select class="select left_menu_in-select">
-						<option value="/href">Все</option>
-						<option value="/href" selected="">Тема 1</option>
-						<option value="/href">Тема 2</option>
-						<option value="/href">Тема 3</option>
-						<option value="/href">Тема 4</option>
-					</select>
-				</div>
-				
 
 				<div class="page_row">
 					<div class="page_row__center">
@@ -287,29 +273,21 @@
 									<a href="javascript:;" class="about_item__more_link" onclick="$(this).parent().prev().slideDown();$(this).parent().slideUp();">Подробнее <i class="icon-right"></i></a>
 								</div>
 							</div>
-						</div>
-
-
-
+						</div><!--/about_list-->
+						
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
-
-
-	<div class="new_footer">
-		<div class="wrapper">
-			<div class="new_footer__copy">© 2018 ООО «ГАЛС»Сайт не является публичной офертой*</div>
-			<a href="#" class="new_footer__link">Разрешительная документация</a>
-			<a href="#" class="new_footer__link">Политика конфиденциальности</a>
-		</div>
-	</div>
-
-
 </div>
 
+<div class="new_footer">
+	<div class="wrapper">
+		<div class="new_footer__copy">© 2018 ООО «ГАЛС»Сайт не является публичной офертой*</div>
+		<a href="#" class="new_footer__link">Разрешительная документация</a>
+		<a href="#" class="new_footer__link">Политика конфиденциальности</a>
+	</div>
+</div>
 
 
