--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -214,6 +214,13 @@
 					<li><a href="#tab3" class="buy_tabs__item">Контакты</a></li>
 				</ul>
 
+
+				<div class="breadcrumbs">
+					<a href="" class="breadcrumbs__link">Главная</a>
+					<a href="" class="breadcrumbs__link">О проекте</a>
+					<span class="breadcrumbs__item">FAQ</span>
+				</div>
+
 				
 
 				<div class="row mgb35 contacts">
