--- a/dev/partners.html
+++ b/dev/partners.html
@@ -215,6 +215,13 @@
 				</ul>
 
 
+				<div class="breadcrumbs">
+					<a href="" class="breadcrumbs__link">Главная</a>
+					<a href="" class="breadcrumbs__link">О проекте</a>
+					<span class="breadcrumbs__item">FAQ</span>
+				</div>
+
+
 				<div class="main_inside__header">
 					<h1>Партнеты</h1>
 					<div class="main_inside__subtitle">
