--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -253,7 +253,7 @@
 												<clipPath id="SVGID_2_">
 													<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 												</clipPath>
-												<path class="st0" fill="#00B6BD" d="M131.7,0C59.1,0,0,58.8,0,131.1c0,73.2,131.5,223.9,131.5,223.9s131.9-150.5,131.9-223.3
+												<path d="M131.7,0C59.1,0,0,58.8,0,131.1c0,73.2,131.5,223.9,131.5,223.9s131.9-150.5,131.9-223.3
 													C263.4,58.9,204.6,0,131.7,0 M131.7,197.8c-40,0-72.5-32.5-72.5-72.5c0-40,32.5-72.5,72.5-72.5s72.5,32.5,72.5,72.5
 													C204.2,165.4,171.7,197.8,131.7,197.8"/>
 											</g>
@@ -270,7 +270,7 @@
 												<clipPath id="SVGID_2_2">
 													<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 												</clipPath>
-												<path class="st0" fill="#00B6BD" d="M3.2,4.4c0.3-0.3,0.7-0.6,1-1c0.4-0.4,0.4-0.7,0.1-1.1C3.8,1.7,3.4,1,2.9,0.3C2.8,0.1,2.6,0,2.4,0
+												<path d="M3.2,4.4c0.3-0.3,0.7-0.6,1-1c0.4-0.4,0.4-0.7,0.1-1.1C3.8,1.7,3.4,1,2.9,0.3C2.8,0.1,2.6,0,2.4,0
 													C2.2,0.1,2,0.1,1.8,0.3C1.3,0.7,0.9,1.2,0.4,1.7C0.1,2,0,2.4,0,2.9c0.1,0.7,0.3,1.3,0.7,1.8c1.7,2.8,3.9,5.1,6.8,6.8
 													c0.5,0.3,1,0.5,1.5,0.6c0.5,0.1,0.9,0.1,1.3-0.2c0.6-0.5,1.1-1.1,1.7-1.7c0.3-0.3,0.2-0.8-0.1-0.9c-0.7-0.5-1.5-0.9-2.2-1.4
 													C9.4,7.6,9,7.7,8.7,8C8.4,8.3,8,8.7,7.7,9C5.9,7.8,4.4,6.3,3.2,4.4"/>
@@ -281,9 +281,6 @@
 										<div class="contacts_item">
 											<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 viewBox="0 0 11.8 9.1" xml:space="preserve"  style="width: 24px; float: 0 0 24px;">
-											<style type="text/css">
-												.st0{clip-path:url(#SVGID_2_);fill:#00B6BD;}
-											</style>
 											<g>
 												<defs>
 													<rect id="SVGID_1_" y="0" width="11.8" height="9.1"/>
@@ -291,7 +288,7 @@
 												<clipPath id="SVGID_2_">
 													<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 												</clipPath>
-												<path class="st0" fill="#00B6BD" d="M11.8,0.7C11.7,0.3,11.4,0,11,0C7.6,0,4.2,0,0.7,0C0.4,0,0.2,0.1,0.1,0.4C0,0.6,0,0.8,0,1c0,2.4,0,4.7,0,7.1
+												<path ill="#00B6BD" d="M11.8,0.7C11.7,0.3,11.4,0,11,0C7.6,0,4.2,0,0.7,0C0.4,0,0.2,0.1,0.1,0.4C0,0.6,0,0.8,0,1c0,2.4,0,4.7,0,7.1
 													c0,0.1,0,0.2,0,0.3c0.1,0.5,0.3,0.7,0.8,0.7h5.1H11c0.4,0,0.6-0.2,0.7-0.6c0-0.1,0-0.3,0-0.4c0-2.4,0-4.7,0-7.1
 													C11.8,0.9,11.8,0.8,11.8,0.7 M10.1,1.1C10,1.2,10,1.2,10.1,1.1C8.7,2.6,7.4,4,6.1,5.4c-0.2,0.2-0.3,0.2-0.4,0
 													C4.4,4,3.1,2.6,1.8,1.2c0,0,0-0.1-0.1-0.1H10.1z M1.1,2.1C1.9,3,2.7,3.8,3.5,4.7C2.7,5.5,1.9,6.3,1.1,7.1V2.1z M1.8,8
@@ -320,34 +317,34 @@
 						</div>
 						<script>
 							//карта
-							$(function(){
-						    ymaps.ready(init);
+							// $(function(){
+						 //    ymaps.ready(init);
 
-						    function init() {
-						      var myMap = new ymaps.Map("map", {
-						          center: [55.76, 37.64],
-						          zoom: 14
-						      },{
-						          searchControlProvider: 'yandex#search'
-						      }),
+						 //    function init() {
+						 //      var myMap = new ymaps.Map("map", {
+						 //          center: [55.76, 37.64],
+						 //          zoom: 14
+						 //      },{
+						 //          searchControlProvider: 'yandex#search'
+						 //      }),
 
-						      myGeoObject = new ymaps.GeoObject({
-						        geometry: {
-						            type: "Point",
-						            coordinates: [55.76, 37.64]
-						        },
-						        properties: {
-						            iconContent: 'VALO',
-						            hintContent: 'Апарт-комплекс по-фински'
-						        }
-						      },{
-						        preset: 'islands#blackStretchyIcon',
-						        draggable: false
-						      });
+						 //      myGeoObject = new ymaps.GeoObject({
+						 //        geometry: {
+						 //            type: "Point",
+						 //            coordinates: [55.76, 37.64]
+						 //        },
+						 //        properties: {
+						 //            iconContent: 'VALO',
+						 //            hintContent: 'Апарт-комплекс по-фински'
+						 //        }
+						 //      },{
+						 //        preset: 'islands#blackStretchyIcon',
+						 //        draggable: false
+						 //      });
 
-						      myMap.geoObjects.add(myGeoObject);
-						    }
-							})
+						 //      myMap.geoObjects.add(myGeoObject);
+						 //    }
+							// })
 						</script>
 					</div>
 				</div>
@@ -387,7 +384,7 @@
 														<clipPath id="SVGID_2_">
 															<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 														</clipPath>
-														<path class="st0" fill="#fff" d="M11.1,8.9c0-0.5,0-1,0-1.5c0-0.1,0-0.2,0-0.4c0-0.1-0.1-0.2-0.3-0.2c-0.1,0-0.1,0-0.2,0c-0.7,0-1.5,0-2.2,0
+														<path d="M11.1,8.9c0-0.5,0-1,0-1.5c0-0.1,0-0.2,0-0.4c0-0.1-0.1-0.2-0.3-0.2c-0.1,0-0.1,0-0.2,0c-0.7,0-1.5,0-2.2,0
 															c0,0-0.1,0-0.1,0C8,6.9,7.9,7.1,8.1,7.4c0,0.1,0.1,0.1,0.1,0.2c0.2,0.3,0.3,0.7,0.3,1.1c0,0.8,0,1.6,0,2.4c0,0.1,0,0.2,0,0.3
 															c0,0.1-0.1,0.2-0.2,0.2c-0.1,0-0.1,0-0.1,0c-0.1,0-0.1-0.1-0.2-0.1c-0.1-0.1-0.3-0.3-0.4-0.4c-0.3-0.4-0.6-0.9-0.8-1.3
 															C6.5,8.9,6.2,8.2,5.9,7.4c0-0.1-0.1-0.2-0.1-0.3C5.7,6.9,5.6,6.8,5.4,6.8c-0.1,0-0.1,0-0.2,0c-0.5,0-0.9,0-1.4,0
@@ -421,7 +418,7 @@
 														<clipPath id="SVGID_2_">
 															<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 														</clipPath>
-														<path class="st0" fill="#fff" d="M19.8,7.1c0-0.4,0-0.7,0-1.1c0-0.7-0.1-1.3-0.2-2c-0.1-0.5-0.2-0.9-0.3-1.4c-0.2-0.4-0.4-0.9-0.7-1.2
+														<path d="M19.8,7.1c0-0.4,0-0.7,0-1.1c0-0.7-0.1-1.3-0.2-2c-0.1-0.5-0.2-0.9-0.3-1.4c-0.2-0.4-0.4-0.9-0.7-1.2
 															c-0.4-0.4-0.8-0.7-1.4-0.9c-0.6-0.2-1.2-0.3-1.8-0.4C14.9,0.1,14.3,0,13.6,0c-1.3,0-2.6,0-3.8,0v0c-1,0-1.9,0-2.9,0
 															C6.5,0,6.2,0,5.8,0C5.2,0,4.5,0.1,3.9,0.2c-0.5,0.1-1,0.2-1.5,0.4C1.7,1,1.1,1.5,0.7,2.2C0.5,2.6,0.4,3,0.3,3.5
 															C0.1,4.2,0.1,4.9,0,5.6C0,6.1,0,6.5,0,7c0,2,0,4,0,5.9c0,0.4,0,0.8,0,1.1c0,0.6,0.1,1.3,0.2,1.9c0.1,0.5,0.2,1,0.4,1.5
@@ -446,13 +443,13 @@
 													<clipPath id="SVGID_2_">
 														<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
 													</clipPath>
-													<path class="st0" fill="#fff" d="M9.9,17.8c1.4,0,2.8,0,4.2,0c2.5-0.1,3.9-1.4,4-3.8c0.1-2.8,0.1-5.5,0-8.3c0-2-1-3.3-2.8-3.7
+													<path d="M9.9,17.8c1.4,0,2.8,0,4.2,0c2.5-0.1,3.9-1.4,4-3.8c0.1-2.8,0.1-5.5,0-8.3c0-2-1-3.3-2.8-3.7
 														c-0.4-0.1-0.8-0.1-1.1-0.1c-2.8,0-5.5,0-8.2,0c-2.5,0-3.9,1.4-4,3.8c-0.1,2.8-0.1,5.5,0,8.3c0.1,2.4,1.5,3.8,3.9,3.8
 														C7.2,17.8,8.5,17.8,9.9,17.8 M0,5.6c0.1-0.5,0.2-1,0.3-1.5c0.6-2.3,2.4-3.9,4.8-4c3.3-0.1,6.6-0.1,9.8,0c2.7,0.1,4.8,2.2,4.9,4.9
 														c0.1,3.2,0.1,6.3,0,9.5c-0.1,2.7-2.1,4.8-4.9,4.9c-3.3,0.1-6.6,0.1-9.9,0c-2.7-0.1-4.6-2.2-4.9-4.9c0-0.2-0.1-0.4-0.1-0.6V5.6z"/>
-													<path class="st0" fill="#fff" d="M13.2,9.8c0-1.8-1.5-3.3-3.3-3.3C8.1,6.5,6.7,8,6.7,9.8c0,1.8,1.5,3.3,3.3,3.3C11.8,13.1,13.2,11.6,13.2,9.8
+													<path d="M13.2,9.8c0-1.8-1.5-3.3-3.3-3.3C8.1,6.5,6.7,8,6.7,9.8c0,1.8,1.5,3.3,3.3,3.3C11.8,13.1,13.2,11.6,13.2,9.8
 														 M9.9,14.8c-2.8,0-5.1-2.3-5.1-5.1c0-2.8,2.3-5,5.1-5c2.8,0,5.1,2.3,5.1,5.1C15.1,12.6,12.7,14.8,9.9,14.8"/>
-													<path class="st0" fill="#fff" d="M14.1,4.5c0-0.7,0.5-1.2,1.2-1.2c0.6,0,1.2,0.5,1.2,1.2c0,0.6-0.6,1.2-1.2,1.2C14.6,5.7,14.1,5.2,14.1,4.5"/>
+													<path d="M14.1,4.5c0-0.7,0.5-1.2,1.2-1.2c0.6,0,1.2,0.5,1.2,1.2c0,0.6-0.6,1.2-1.2,1.2C14.6,5.7,14.1,5.2,14.1,4.5"/>
 												</g>
 												</svg>
 
