--- a/dev/index.html
+++ b/dev/index.html
@@ -964,7 +964,7 @@
 		<div class="wide__in">
 			<div class="photo_webcam animated fade fade-bottom">
 				<div class="photo_webcam__start"></div>
-				<iframe id="iframe" src="https://webcam.exdesign.ru/valo/" frameborder="0" allowfullscreen="1"></iframe>
+				<iframe id="iframe" src="https://webcam.exdesign.ru/valo/?fluid" frameborder="0" allowfullscreen="1" scrolling="no"></iframe>
 			</div>
 		</div>
 	</div>
