--- a/dev/_footer.html
+++ b/dev/_footer.html
@@ -9,9 +9,80 @@
 					<div class="footer_gen__desc">Финская строительная компания — создана в 1910 году, на российском рынке с 1975 года. Строим проекты любой сложности. Упор на передовые технологии, надёжность и скандинавский дизайн.</div>
 				</div>
 				<div class="footer_soc">
-					<a href="" class="footer_soc__item"><img src="img/vk.png" alt="VK"></a>
-					<a href="" class="footer_soc__item"><img src="img/fb.png" alt="Facebook"></a>
-					<a href="" class="footer_soc__item"><img src="img/ig.png" alt="Instagram"></a>
+					<a href="" class="footer_soc__item">
+						<svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 19.8 21.4" style="enable-background:new 0 0 19.8 21.4;" xml:space="preserve" width="43" height="43">
+							<g>
+								<defs>
+									<rect id="SVGID_1_" y="0" width="19.8" height="21.4"/>
+								</defs>
+								<clipPath id="SVGID_2_">
+									<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+								</clipPath>
+								<path class="st0" d="M11.1,8.9c0-0.5,0-1,0-1.5c0-0.1,0-0.2,0-0.4c0-0.1-0.1-0.2-0.3-0.2c-0.1,0-0.1,0-0.2,0c-0.7,0-1.5,0-2.2,0
+									c0,0-0.1,0-0.1,0C8,6.9,7.9,7.1,8.1,7.4c0,0.1,0.1,0.1,0.1,0.2c0.2,0.3,0.3,0.7,0.3,1.1c0,0.8,0,1.6,0,2.4c0,0.1,0,0.2,0,0.3
+									c0,0.1-0.1,0.2-0.2,0.2c-0.1,0-0.1,0-0.1,0c-0.1,0-0.1-0.1-0.2-0.1c-0.1-0.1-0.3-0.3-0.4-0.4c-0.3-0.4-0.6-0.9-0.8-1.3
+									C6.5,8.9,6.2,8.2,5.9,7.4c0-0.1-0.1-0.2-0.1-0.3C5.7,6.9,5.6,6.8,5.4,6.8c-0.1,0-0.1,0-0.2,0c-0.5,0-0.9,0-1.4,0
+									c-0.1,0-0.1,0-0.2,0C3.5,6.9,3.4,7,3.3,7.2c0,0,0,0.1,0,0.1c0,0.2,0.1,0.3,0.1,0.5C3.6,8.4,3.8,9,4.1,9.6c0.5,1,1,2,1.6,3
+									c0.4,0.6,0.9,1.2,1.5,1.7c0.8,0.6,1.7,1,2.7,1.1c0.2,0,0.5,0,0.7,0c0.1,0,0.2-0.1,0.2-0.1C11,15.1,11,15,11,14.8c0-0.1,0-0.2,0-0.2
+									c0-0.5,0-0.9,0-1.4c0-0.1,0-0.2,0-0.2c0-0.2,0.1-0.2,0.3-0.3c0.2,0,0.4,0.1,0.6,0.2c0.2,0.1,0.3,0.2,0.4,0.3
+									c0.4,0.4,0.8,0.8,1.2,1.3c0.1,0.2,0.3,0.4,0.5,0.5c0.2,0.2,0.4,0.3,0.6,0.3c0.5,0,0.9,0,1.4,0c0.1,0,0.2,0,0.3-0.1
+									c0.1-0.1,0.2-0.2,0.2-0.3c0-0.1,0-0.2-0.1-0.3c-0.1-0.2-0.2-0.4-0.3-0.5c-0.4-0.6-0.8-1.1-1.2-1.6c-0.2-0.2-0.4-0.4-0.6-0.6
+									c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.1-0.2,0-0.3c0-0.1,0.1-0.2,0.1-0.3c0.5-0.8,1-1.5,1.4-2.3c0.2-0.3,0.3-0.6,0.4-1
+									c0-0.1,0.1-0.3,0.1-0.4c0-0.2-0.1-0.3-0.2-0.3c-0.1,0-0.1,0-0.2,0c-0.5,0-1,0-1.5,0c-0.2,0-0.4,0.1-0.5,0.2
+									c-0.1,0.1-0.1,0.2-0.1,0.2c-0.3,0.8-0.7,1.6-1.2,2.4c-0.2,0.4-0.5,0.7-0.7,1c-0.1,0.1-0.1,0.1-0.2,0.2c-0.1,0.1-0.1,0.1-0.2,0.1
+									c-0.1,0-0.2,0-0.2-0.1c-0.1-0.1-0.1-0.2-0.1-0.3C11.1,10,11.1,9.5,11.1,8.9 M9.8,0c1.3,0,2.6,0,3.8,0c0.6,0,1.2,0,1.9,0.1
+									c0.6,0.1,1.2,0.2,1.8,0.5c0.5,0.2,1,0.5,1.4,1c0.3,0.4,0.5,0.8,0.7,1.3c0.2,0.5,0.3,1,0.3,1.5c0.1,0.7,0.1,1.4,0.2,2.1
+									c0,0.4,0,0.8,0,1.1c0,2,0,4.1,0,6.1c0,0.7,0,1.4-0.1,2.1c0,0.7-0.1,1.4-0.3,2c-0.1,0.4-0.2,0.8-0.4,1.2c-0.4,0.7-0.9,1.3-1.6,1.6
+									c-0.4,0.2-0.9,0.3-1.3,0.4c-0.5,0.1-1,0.2-1.5,0.2c-0.6,0-1.1,0.1-1.7,0.1c-2,0-4.1,0-6.1,0c-0.4,0-0.9,0-1.3,0
+									c-0.6,0-1.2-0.1-1.7-0.2c-0.5-0.1-1-0.3-1.4-0.5c-0.7-0.4-1.2-1-1.6-1.8c-0.2-0.5-0.3-1-0.4-1.6C0.1,16.5,0,15.8,0,15.2
+									c0-0.4,0-0.8,0-1.2c0-2.1,0-4.3,0-6.4c0-0.5,0-1,0-1.4c0-0.8,0.1-1.6,0.3-2.3c0.1-0.5,0.2-0.9,0.4-1.3C1.1,1.6,1.7,1,2.4,0.7
+									c0.5-0.2,1-0.4,1.5-0.5C4.5,0.1,5.2,0,5.8,0c0.4,0,0.7,0,1.1,0C7.9,0,8.8,0,9.8,0L9.8,0z"/>
+							</g>
+						</svg>
+					</a>
+					<a href="" class="footer_soc__item">
+						<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 viewBox="0 0 19.8 19.8" style="enable-background:new 0 0 19.8 19.8;" xml:space="preserve" width="43" height="43">
+							<g>
+								<defs>
+									<rect id="SVGID_1_" y="0" width="19.8" height="19.8"/>
+								</defs>
+								<clipPath id="SVGID_2_">
+									<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+								</clipPath>
+								<path d="M19.8,7.1c0-0.4,0-0.7,0-1.1c0-0.7-0.1-1.3-0.2-2c-0.1-0.5-0.2-0.9-0.3-1.4c-0.2-0.4-0.4-0.9-0.7-1.2
+									c-0.4-0.4-0.8-0.7-1.4-0.9c-0.6-0.2-1.2-0.3-1.8-0.4C14.9,0.1,14.3,0,13.6,0c-1.3,0-2.6,0-3.8,0v0c-1,0-1.9,0-2.9,0
+									C6.5,0,6.2,0,5.8,0C5.2,0,4.5,0.1,3.9,0.2c-0.5,0.1-1,0.2-1.5,0.4C1.7,1,1.1,1.5,0.7,2.2C0.5,2.6,0.4,3,0.3,3.5
+									C0.1,4.2,0.1,4.9,0,5.6C0,6.1,0,6.5,0,7c0,2,0,4,0,5.9c0,0.4,0,0.8,0,1.1c0,0.6,0.1,1.3,0.2,1.9c0.1,0.5,0.2,1,0.4,1.5
+									c0.3,0.7,0.9,1.3,1.6,1.7c0.5,0.2,0.9,0.4,1.4,0.5c0.6,0.1,1.2,0.2,1.7,0.2c0.4,0,0.9,0,1.3,0c1.2,0,2.4,0,3.6,0v-7.1h-0.2
+									c-0.7,0-1.3,0-2,0c-0.1,0-0.2,0-0.2-0.1c0-1,0-1.9,0-2.9c0,0,0-0.1,0-0.1h2.3c0-0.1,0-0.2,0-0.3c0-0.6,0-1.1,0.1-1.7
+									c0.2-1.1,0.7-2.1,1.7-2.8c0.6-0.4,1.2-0.6,1.9-0.6c0.8,0,1.5,0,2.3,0h0.2c0,0.1,0,0.1,0,0.2c0,1,0,1.9,0,2.9c0,0.1-0.1,0.2-0.2,0.2
+									c-0.7,0-1.5,0-2.2,0c-0.5,0-0.7,0.3-0.8,0.7c0,0.5,0,1,0,1.5h3.2c0,0.1,0,0.1,0,0.2c0,0.9,0,1.9,0,2.8c0,0.1,0,0.2-0.2,0.2
+									c-0.9,0-1.9,0-2.8,0h-0.2v0.2c0,2.3,0,4.6,0,6.9c0.4,0,0.8,0,1.2,0c0.5,0,1-0.1,1.5-0.2c0.5-0.1,0.9-0.2,1.3-0.4
+									c0.7-0.3,1.2-0.8,1.6-1.5c0.2-0.4,0.3-0.7,0.4-1.1c0.2-0.6,0.2-1.2,0.3-1.9c0-0.6,0.1-1.3,0.1-1.9C19.8,10.9,19.8,9,19.8,7.1"/>
+							</g>
+						</svg>
+					</a>
+					<a href="" class="footer_soc__item">
+						<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 viewBox="0 0 19.8 19.6" style="enable-background:new 0 0 19.8 19.6;" xml:space="preserve" width="43" height="43">
+						<g>
+							<defs>
+								<rect id="SVGID_1_" y="0" width="19.8" height="19.6"/>
+							</defs>
+							<clipPath id="SVGID_2_">
+								<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+							</clipPath>
+							<path d="M9.9,17.8c1.4,0,2.8,0,4.2,0c2.5-0.1,3.9-1.4,4-3.8c0.1-2.8,0.1-5.5,0-8.3c0-2-1-3.3-2.8-3.7
+								c-0.4-0.1-0.8-0.1-1.1-0.1c-2.8,0-5.5,0-8.2,0c-2.5,0-3.9,1.4-4,3.8c-0.1,2.8-0.1,5.5,0,8.3c0.1,2.4,1.5,3.8,3.9,3.8
+								C7.2,17.8,8.5,17.8,9.9,17.8 M0,5.6c0.1-0.5,0.2-1,0.3-1.5c0.6-2.3,2.4-3.9,4.8-4c3.3-0.1,6.6-0.1,9.8,0c2.7,0.1,4.8,2.2,4.9,4.9
+								c0.1,3.2,0.1,6.3,0,9.5c-0.1,2.7-2.1,4.8-4.9,4.9c-3.3,0.1-6.6,0.1-9.9,0c-2.7-0.1-4.6-2.2-4.9-4.9c0-0.2-0.1-0.4-0.1-0.6V5.6z"/>
+							<path d="M13.2,9.8c0-1.8-1.5-3.3-3.3-3.3C8.1,6.5,6.7,8,6.7,9.8c0,1.8,1.5,3.3,3.3,3.3C11.8,13.1,13.2,11.6,13.2,9.8
+								 M9.9,14.8c-2.8,0-5.1-2.3-5.1-5.1c0-2.8,2.3-5,5.1-5c2.8,0,5.1,2.3,5.1,5.1C15.1,12.6,12.7,14.8,9.9,14.8"/>
+							<path d="M14.1,4.5c0-0.7,0.5-1.2,1.2-1.2c0.6,0,1.2,0.5,1.2,1.2c0,0.6-0.6,1.2-1.2,1.2C14.6,5.7,14.1,5.2,14.1,4.5"/>
+						</g>
+						</svg>
+					</a>
 				</div>
 			</div>
 			<div class="footer_bottom">
