--- a/dev/about.html
+++ b/dev/about.html
@@ -218,6 +218,12 @@
 					<li><a href="#tab3" class="buy_tabs__item">Контакты</a></li>
 				</ul>
 
+				<div class="breadcrumbs">
+					<a href="" class="breadcrumbs__link">Главная</a>
+					<a href="" class="breadcrumbs__link">О проекте</a>
+					<span class="breadcrumbs__item">О компании</span>
+				</div>
+
 
 				<div class="main_inside__header">
 					<h1>О компании</h1>
@@ -244,7 +250,7 @@
 									</div>
 								</div>
 								<div class="relative alignright">
-									<a href="javascript:;" class="about_item__more_link" onclick="$(this).parent().prev().slideDown();$(this).parent().slideUp();">Подробнее <i class="icon-right"></i></a>
+									<a href="google.ru" class="about_item__more_link">Подробнее <i class="icon-right"></i></a>
 								</div>
 							</div>
 
@@ -270,7 +276,7 @@
 									</div>
 								</div>
 								<div class="relative alignright">
-									<a href="javascript:;" class="about_item__more_link" onclick="$(this).parent().prev().slideDown();$(this).parent().slideUp();">Подробнее <i class="icon-right"></i></a>
+									<a href="google.ru" class="about_item__more_link">Подробнее <i class="icon-right"></i></a>
 								</div>
 							</div>
 						</div><!--/about_list-->
