--- a/dev/_header.html
+++ b/dev/_header.html
@@ -137,8 +137,8 @@
 				</div>
 			</div>
 			<div class="header_control">
-				<a href="#" class="header_i_phone"></a>
-				<a href="#" class="header_i_mail"></a>
+				<a href="javascript:;" class="header_i_phone" data-toggle="modal" data-target="#modal_call"></a>
+				<a href="javascript:;" class="header_i_mail" data-toggle="modal" data-target="#modal_call"></a>
 
 
 				<div class="header_slider_control">
