--- a/dev/faq.html
+++ b/dev/faq.html
@@ -350,6 +350,59 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="call_btns">
+			<div class="call_btns_wrap">
+				<a href="javascript:;" class="call_btns_item call_btns_item-call" data-toggle="modal" data-target="#modal_call">
+					<div class="call_btns_item__icon">
+						<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 viewBox="0 0 10.8 10.8" style="enable-background:new 0 0 10.8 10.8;" xml:space="preserve">
+						<g>
+							<defs>
+								<rect id="SVGID_1_" y="0" width="10.8" height="10.8"/>
+							</defs>
+							<clipPath id="SVGID_2_">
+								<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+							</clipPath>
+							<path class="st0" d="M2.8,4c0.3-0.3,0.6-0.6,0.9-0.9C4,2.8,4,2.5,3.8,2.1C3.4,1.5,3,0.9,2.6,0.3C2.5,0.1,2.4,0,2.2,0
+								C2,0.1,1.8,0.1,1.6,0.3C1.2,0.7,0.8,1.1,0.4,1.5C0.1,1.8,0,2.1,0,2.5c0.1,0.6,0.3,1.1,0.6,1.6c1.5,2.5,3.5,4.5,6,6
+								C7,10.4,7.5,10.6,8,10.7c0.4,0.1,0.8,0.1,1.2-0.2c0.5-0.5,1-1,1.5-1.5c0.2-0.3,0.2-0.7-0.1-0.8C9.9,7.8,9.3,7.4,8.6,7
+								C8.3,6.8,8,6.8,7.8,7.1C7.4,7.4,7.1,7.7,6.8,8C5.2,6.9,3.9,5.6,2.8,4"/>
+						</g>
+						</svg>
+					</div>
+					<div class="call_btns_item__label">Заказать звонок</div>
+				</a>
+				<a href="javascript:;" class="call_btns_item call_btns_item-mail" data-toggle="modal" data-target="#modal_call">
+					<div class="call_btns_item__icon">
+						<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 viewBox="0 0 10.3 8" style="enable-background:new 0 0 10.3 8;" xml:space="preserve">
+						<g>
+							<defs>
+								<rect id="SVGID_1_" y="0" width="10.3" height="8"/>
+							</defs>
+							<clipPath id="SVGID_2_">
+								<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+							</clipPath>
+							<path class="st0" d="M10.3,7.5c0-0.1,0-0.3,0-0.4c0-2.1,0-4.1,0-6.2c0-0.1,0-0.2,0-0.3C10.2,0.2,10,0,9.7,0c-3,0-6,0-9,0
+								C0.4,0,0.2,0.1,0.1,0.3C0,0.5,0,0.7,0,0.9C0,3,0,5,0,7.1c0,0.1,0,0.2,0,0.3C0.1,7.7,0.3,8,0.7,8c1.5,0,3,0,4.4,0c1.5,0,3,0,4.5,0
+								C10,8,10.2,7.8,10.3,7.5 M8.8,1C8.8,1,8.8,1,8.8,1C7.6,2.3,6.5,3.5,5.4,4.7C5.2,4.9,5.1,4.9,5,4.8C3.8,3.5,2.7,2.3,1.6,1.1
+								c0,0,0,0-0.1-0.1H8.8z M1,1.8c0.7,0.8,1.4,1.5,2.1,2.3C2.4,4.8,1.7,5.5,1,6.2V1.8z M1.5,7C2.3,6.3,3,5.5,3.7,4.8
+								C3.9,5,4.1,5.2,4.3,5.4C4.8,6,5.5,6,6,5.4C6.2,5.2,6.4,5,6.6,4.8C7.3,5.5,8,6.3,8.8,7H1.5z M9.3,6.2C8.6,5.5,7.9,4.8,7.2,4.1
+								c0.7-0.8,1.4-1.5,2.1-2.3V6.2z"/>
+						</g>
+						</svg>
+					</div>
+					<div class="call_btns_item__label">Написать письмо</div>
+				</a>
+				<a href="javascript:;" class="call_btns_item call_btns_item-up">
+					<div class="call_btns_item__icon">
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd"  fill="rgb(0, 182, 189)" d="M-0.000,-0.006 L10.004,9.998 L-0.000,20.002 L5.726,10.335 L-0.000,-0.006 Z"/></svg>
+					</div>
+					<div class="call_btns_item__label">Наверх</div>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
 
@@ -361,4 +414,29 @@
 	</div>
 </div>
 
+
+
+
+
+<div id="modal_call" class="modal fade" >
+	<div class="modal-dialog">
+		<a href="javascript:;" class="close" data-dismiss="modal"><i class="icon-cancel"></i></a>
+
+		<div class="modal_title">Написать письмо:</div>
+		<div class="modal_subtitle">Оставьте свои пожелания или задайте вопрос</div>
+
+		<form action="">
+				<input type="text" class="form_input form_input-name" placeholder="Ваше имя" name="name">
+				<input type="text" class="form_input form_input-phone" placeholder="Телефон" name="phone">
+				<textarea class="form_input form_input-text" placeholder="Текст сообщения"></textarea>
+				<label class="check">
+					<input type="checkbox">
+					<div class="check__title">Согласен с политикой обработки персональных данных</div>
+				</label>
+				<button class="btn">Отправить <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></button>
+			</form>
+			<div class="contacts_form_success">Спасибо!</div>
+		</div>
+	</div>
+</div>
 
