--- a/dev/_header.html
+++ b/dev/_header.html
@@ -123,7 +123,7 @@
 								</div>
 							</div>
 
-							<a href="#" class="service_btn btn btn-angle-right">Выбрать апартаменты 
+							<a href="#" class="styled-btn">Выбрать апартаменты 
 								<svg 
 								 xmlns="http://www.w3.org/2000/svg"
 								 xmlns:xlink="http://www.w3.org/1999/xlink"
