--- a/dev/index.html
+++ b/dev/index.html
@@ -434,7 +434,7 @@
 
 			
 			<div class="aligncenter animated fade fade-bottom"">
-				<a href="#" class="btn mgt10">Выбрать апартаменты <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
+				<a href="#" class="styled-btn mgt10">Выбрать апартаменты <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
 			</div>
 		</div>
 	</div>
@@ -597,14 +597,14 @@
 
 			<div class="invest_bottom row animated fade fade-bottom">
 				<div class="col-4 off-5">
-					<a href="#" class="btn">Подробнее о прораммах <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
+					<a href="#" class="styled-btn">Подробнее о прораммах <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
 				</div>
 				<div class="col-5">
 					<div class="invest_bottom__label">Для тех кто хочет больше, <br>создана программа VALO INVEST</div>
 				</div>
 				
 				<div class="col-4">
-					<a href="#" class="btn mgt10">Подробнее о портфельных программах <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
+					<a href="#" class="styled-btn mgt10">Подробнее о портфельных программах <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
 				</div>
 			</div>
 		</div>
@@ -904,10 +904,10 @@
 
 					<div class="buy_btns">
 						<div class="buy_btns__item">
-							<a href="#" class="btn">Оставить заявку в банк <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
+							<a href="#" class="styled-btn">Оставить заявку в банк <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
 						</div>
 						<div class="buy_btns__item">
-							<a href="#" class="btn">Подробнее <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
+							<a href="#" class="styled-btn">Подробнее <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></a>
 						</div>
 					</div>
 
@@ -1085,14 +1085,14 @@
 		</div>
 	</div>
 
-	<div class="managers_form">
+	<div class="contacts_form managers_form">
 		<div class="wrapper">
 			<form action="">
 				<input type="text" class="form_input form_input-name" placeholder="Ваше имя" name="name">
 				<input type="text" class="form_input form_input-phone" placeholder="Телефон" name="phone">
 				<button class="btn">Отправить <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"></path></svg></button>
 			</form>
-			<div class="managers_form_success">Спасибо!</div>
+			<div class="contacts_form_success">Спасибо!</div>
 		</div>
 	</div>
 </div>
