--- a/dev/_header.html
+++ b/dev/_header.html
@@ -128,7 +128,7 @@
 								 xmlns="http://www.w3.org/2000/svg"
 								 xmlns:xlink="http://www.w3.org/1999/xlink"
 								 width="10px" height="20px">
-								<path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+								<path fill-rule="evenodd" 
 								 d="M-0.000,-0.005 L10.004,9.999 L-0.000,20.002 L5.726,10.335 L-0.000,-0.005 Z"/>
 								</svg>
 							</a>
