--- a/dev/about_proj.html
+++ b/dev/about_proj.html
@@ -328,7 +328,7 @@
 					</div>
 					<div class="call_btns_item__label">Написать письмо</div>
 				</a>
-				<a href="javascript:;" class="call_btns_item call_btns_item-up">
+				<a href="javascript:;" class="call_btns_item call_btns_item-up" id="backToTop">>
 					<div class="call_btns_item__icon">
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10px" height="20px"><path fill-rule="evenodd"  fill="rgb(0, 182, 189)" d="M-0.000,-0.006 L10.004,9.998 L-0.000,20.002 L5.726,10.335 L-0.000,-0.006 Z"/></svg>
 					</div>
