--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -24,9 +24,9 @@
 									</li>
 
 									<li class="main_menu__item">
-										<a href="#" class="main_menu__link">Апартаменты</a>
+										<a href="select.html" class="main_menu__link">Выбор апартаментов</a>
 										<ul class="main_menu_sub">
-											<li class="main_menu_sub__item"><a href="select.html" class="mian_menu_sub__link">Выбор апартаментов</a></li>
+											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Планировки</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Коммерческие помещения</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Паркинг</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Отделка и мебель</a></li>
@@ -52,10 +52,7 @@
 
 									<li class="main_menu__item">
 										<a href="#" class="main_menu__link">Ход строительства</a>
-										<ul class="main_menu_sub">
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Фото</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Онайн камера</a></li>
-										</ul>
+										<ul class="main_menu_sub"></ul>
 									</li>
 
 									<li class="main_menu__item">
@@ -106,8 +103,8 @@
 									    <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
 									      <div class="panel-body">
 									        <ul class="main_menu_sub">
-														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Апартаменты</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Выбор апартаментов</a></li>
+														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Планировки</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Коммерческие помещения</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Паркинг</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Отделка и мебель</a></li>
@@ -188,7 +185,7 @@
 
 
 
-							<div class="menu_icons">
+							<!--div class="menu_icons">
 								<a href="" class="menu_hor__icon menu_icons__item">
 									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 										 viewBox="0 0 580 580" style="enable-background:new 0 0 580 580;" xml:space="preserve">
@@ -270,6 +267,6 @@
 									<input type="text" placeholder="Поиск">
 								</div>
 						
-							</div>
+							</div-->
 						</div>
 					</div>
