--- a/dev/select.html
+++ b/dev/select.html
@@ -59,8 +59,8 @@
 
 				<ul class="menu_hor__list">
 					<li class="menu_hor__item"><a href="" class="menu_hor__link menu_hor__link-selected">О проекте</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Выбор апартаментов</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Программа доходности</a></li>
+					<li class="menu_hor__item"><a href="" class="menu_hor__link">Планировки</a></li>
+					<li class="menu_hor__item"><a href="" class="menu_hor__link">Доходные программы</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Как купить</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Ход строительства</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Контакты</a></li>
@@ -170,7 +170,7 @@
 			<div class="wrapper">
 				
 				<ul class="main_inside_tabs buy_tabs">
-					<li class="active"><a href="#tab1" class="buy_tabs__item">Выбор апартаментов</a></li>
+					<li class="active"><a href="#tab1" class="buy_tabs__item">Планировки</a></li>
 					<li><a href="#tab1" class="buy_tabs__item">Коммерческие помещения</a></li>
 					<li><a href="#tab3" class="buy_tabs__item">Паркинг</a></li>
 					<li><a href="#tab3" class="buy_tabs__item">Отделка и мебель</a></li>
@@ -186,7 +186,7 @@
 						
 
 					<div class="main_inside__header ">
-						<h1>Апартаменты</h1>
+						<h1>Планировки</h1>
 						<div class="main_inside__subtitle">
 							<p>- Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software</p>
 						</div>
